Switch to using RHEL

--- a/tasks/proxysql.yml
+++ b/tasks/proxysql.yml
@@ -1,13 +1,7 @@
 ---
-- name: Adds repository key
-  apt_key:
-    url: http://repo.proxysql.com/ProxySQL/repo_pub_key
-    state: present
-
-- name: Adds percona repositories
-  apt_repository:
-    repo: 'deb http://repo.proxysql.com/ProxySQL/proxysql-{{ proxysql_version }}.x/{{ ansible_distribution_release }} ./'
-    state: present
+- name: Adds ProxySQL Repo
+  shell: 
+    cmd: "yum-config-manager --add-repo {{ proxysql_repo_url }}"
 
 - name: Installs proxysql & python-mysqldb
   apt:
@@ -15,20 +9,15 @@
     state: present
   with_items:
     - proxysql
-    - python-mysqldb
+    - python3-PyMSQL
 
-- name: Holds proxysql version
-  dpkg_selections:
-    name: proxysql
-    selection: hold
-
-- name: Installs mysql-common & client
+- name: Installs mysql-common & mysql-libs
   apt:
     pkg: "{{ item }}"
     state: present
   with_items:
     - mysql-common
-    - mysql-client
+    - mysql
 
 - name: Configures proxysql
   template:
